OCIO Aliases Feature Not Fully Working #96049

Closed
opened 2022-02-26 22:07:51 +01:00 by Zijun Zhou · 9 comments
Contributor

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-02-25 22:47, hash: ac3f4db719
Worked: none

Short description of error
OCIO has an Aliases feature, here is the description from official OCIO doc:

The aliases key is used to define alternate names for the colorspace. For example, it may be useful to define a shorter version of the name that is easier to include in texture path >names. Or it may be necessary to define an older version of the name for the color space for backwards compatibility.

aliases: [shortName, obsoleteName]

This is an important feature to keep the "Filmic upgrade to OCIOv2" new config to be backward compatible with older *.blend files.
However it does not seem to work in Blender, I suspect it to be a bug.

Exact steps for others to reproduce the error
For simplicity of the bug report, I will not use the AgX (Filmic upgrade) config here.
Based on default Blender

  1. Open the config.ocio file with any text editor, find the stanza for the color space "Linear"
  2. Change the name to whatever, I am changing it to Linear BT.709 [D65](https://archive.blender.org/developer/D65)
  3. add a line under it and type aliases: [Linear]
    Now it looks like this:
    image.png

I will leave the roles untouched, leave the scene linear and default float roles etc. to be Linear for testing purpose.

  1. Save the file and open Blender, open compositor, check use nodes, and drag & drop an open domain/scene referred EXR, see the default float role still works, and scene linear space is also the Linear BT.709 [D65](https://archive.blender.org/developer/D65) space. Check system console, no related error message. This means the aliases work within the config itself.

  2. Now open an older *.blend file saved with the previous config that has open domain EXRs, like this one:
    Test Aliases.blend

See the input colorspace setting on the node is empty, and open system console, you see error message:
Color management: image colorspace "Linear" not found, will use default instead.

This means Blender is having a bug with aliases, since aliases works perfectly within the config itself. After you do some operation, Blender will select the colorspace based on the roles, but this would not work for "Non-Color" for example. This is an important feature for AgX (Filmic's upgrade to OCIOv2) to be backward compatible, hope the bug can be fixed soon.

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-02-25 22:47, hash: `ac3f4db719` Worked: none **Short description of error** OCIO has an Aliases feature, here is the description from official OCIO doc: >The aliases key is used to define alternate names for the colorspace. For example, it may be useful to define a shorter version of the name that is easier to include in texture path >names. Or it may be necessary to define an older version of the name for the color space for backwards compatibility. > >aliases: [shortName, obsoleteName] This is an important feature to keep the "Filmic upgrade to OCIOv2" new config to be backward compatible with older *.blend files. However it does not seem to work in Blender, I suspect it to be a bug. **Exact steps for others to reproduce the error** For simplicity of the bug report, I will not use the AgX (Filmic upgrade) config here. Based on default Blender 1. Open the config.ocio file with any text editor, find the stanza for the color space "Linear" 2. Change the name to whatever, I am changing it to `Linear BT.709 [D65](https://archive.blender.org/developer/D65)` 3. add a line under it and type `aliases: [Linear]` Now it looks like this: ![image.png](https://archive.blender.org/developer/F12888212/image.png) I will leave the roles untouched, leave the scene linear and default float roles etc. to be `Linear` for testing purpose. 4. Save the file and open Blender, open compositor, check use nodes, and drag & drop an open domain/scene referred EXR, see the default float role still works, and scene linear space is also the `Linear BT.709 [D65](https://archive.blender.org/developer/D65)` space. Check system console, no related error message. This means the aliases work within the config itself. 5. Now open an older *.blend file saved with the previous config that has open domain EXRs, like this one: [Test Aliases.blend](https://archive.blender.org/developer/F12888228/Test_Aliases.blend) See the input colorspace setting on the node is empty, and open system console, you see error message: `Color management: image colorspace "Linear" not found, will use default instead.` This means Blender is having a bug with aliases, since aliases works perfectly within the config itself. After you do some operation, Blender will select the colorspace based on the roles, but this would not work for "Non-Color" for example. This is an important feature for AgX (Filmic's upgrade to OCIOv2) to be backward compatible, hope the bug can be fixed soon.
Author
Contributor

Added subscriber: @Eary

Added subscriber: @Eary
Member

Added subscriber: @EAW

Added subscriber: @EAW

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Confirmed. Blender will load all the colorspaces at startup into its own list and only uses the name when referencing them from this list later on. As such, only Linear BT.709 [D65](https://archive.blender.org/developer/D65) is known and not any of the aliases.

Confirmed. Blender will load all the colorspaces at startup into its own list and only uses the `name` when referencing them from this list later on. As such, only `Linear BT.709 [D65](https://archive.blender.org/developer/D65)` is known and not any of the aliases.

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Author
Contributor

Any news on fixing this?

Any news on fixing this?

This issue was referenced by 5ac4e6c911

This issue was referenced by 5ac4e6c911f6c61a33193f0bf796e1ab093a94e7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-03-23 15:22:46 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96049
No description provided.